--- a/index.html
+++ b/index.html
@@ -15,7 +15,20 @@
 <body>
 
 <div class="box">
-  <h2>Die Challenge: Findest du den Farbencode?</h2>
+<h2>Die Challenge: Findest du den Farbencode?</h2>
+
+<p><strong>Gesucht sind 5 Zahlen.</strong> Jede Farbe entspricht einer Zahl zwischen <strong>1 und 9</strong>.</p>
+
+<ul>
+  <li>Addiert man die <strong>grüne</strong> und die <strong>gelbe</strong> Zahl, ergibt sich die <strong>blaue</strong> Zahl.</li>
+  <li>Teilt man eine der Zahlen durch eine der anderen Zahlen, ergibt sich die <strong>rote</strong> Zahl.</li>
+  <li>Es gibt <strong>zwei gerade</strong> und <strong>drei ungerade</strong> Zahlen.</li>
+  <li>Weder die <strong>höchste</strong> noch die <strong>tiefste</strong> Zahl stehen an den beiden Enden.</li>
+  <li>Keine Zahl kommt doppelt vor.</li>
+  <li>Die <strong>grüne</strong> Zahl ist eine <strong>6</strong>.</li>
+  <li>Addiert man <strong>4</strong> zur <strong>gelben</strong> Zahl, erhält man die <strong>braune</strong> Zahl.</li>
+</ul>
+
 
   <div class="row">
     <label>Grün<br><input value="6" disabled></label>
