--- a/index.html
+++ b/index.html
@@ -10,7 +10,24 @@
     label { flex:1; text-align:center }
     input { width:100%; padding:6px; text-align:center }
     button { padding:10px 16px; margin-top:10px }
-  </style>
+ <style>
+  body { font-family: Arial, sans-serif; background:#f3f4f6; padding:20px }
+  .box { background:white; padding:20px; max-width:700px; margin:auto; border-radius:10px }
+  .row { display:flex; gap:10px; margin-bottom:10px; flex-wrap:wrap }
+  label { flex:1; text-align:center; font-weight:bold }
+  input { width:100%; padding:6px; text-align:center; font-size:16px }
+
+  .green { color:#15803d }
+  .yellow { color:#a16207 }
+  .blue { color:#1d4ed8 }
+  .red { color:#b91c1c }
+  .brown { color:#78350f }
+
+  button { padding:10px 16px; margin-top:10px; font-size:15px; cursor:pointer }
+  .success { color:green; font-weight:bold }
+  .error { color:#b91c1c }
+</style>
+
 </head>
 <body>
 
