--- a/index.html
+++ b/index.html
@@ -3,30 +3,67 @@
 <head>
   <meta charset="UTF-8">
   <title>Farbencode-Challenge</title>
-  <style>
-    body { font-family: Arial, sans-serif; background:#f3f4f6; padding:20px }
-    .box { background:white; padding:20px; max-width:600px; margin:auto; border-radius:8px }
-    .row { display:flex; gap:10px; margin-bottom:10px }
-    label { flex:1; text-align:center }
-    input { width:100%; padding:6px; text-align:center }
-    button { padding:10px 16px; margin-top:10px }
  <style>
-  body { font-family: Arial, sans-serif; background:#f3f4f6; padding:20px }
-  .box { background:white; padding:20px; max-width:700px; margin:auto; border-radius:10px }
-  .row { display:flex; gap:10px; margin-bottom:10px; flex-wrap:wrap }
-  label { flex:1; text-align:center; font-weight:bold }
-  input { width:100%; padding:6px; text-align:center; font-size:16px }
+  body {
+    font-family: Arial, sans-serif;
+    background:#f3f4f6;
+    padding:20px;
+  }
 
-  .green { color:#15803d }
+  .box {
+    background:white;
+    padding:20px;
+    max-width:700px;
+    margin:auto;
+    border-radius:10px;
+  }
+
+  .row {
+    display:flex;
+    gap:10px;
+    margin-bottom:10px;
+    flex-wrap:wrap;
+  }
+
+  label {
+    flex:1;
+    text-align:center;
+    font-weight:bold;
+  }
+
+  input {
+    width:100%;
+    padding:8px;
+    text-align:center;
+    font-size:16px;
+    border-radius:6px;
+  }
+
+  /* Textfarben */
+  .green  { color:#15803d }
   .yellow { color:#a16207 }
-  .blue { color:#1d4ed8 }
-  .red { color:#b91c1c }
-  .brown { color:#78350f }
+  .blue   { color:#1d4ed8 }
+  .red    { color:#b91c1c }
+  .brown  { color:#78350f }
 
-  button { padding:10px 16px; margin-top:10px; font-size:15px; cursor:pointer }
+  /* Eingabefelder */
+  .input-green  { background:#dcfce7; border:2px solid #15803d }
+  .input-yellow { background:#fef9c3; border:2px solid #a16207 }
+  .input-blue   { background:#dbeafe; border:2px solid #1d4ed8 }
+  .input-red    { background:#fee2e2; border:2px solid #b91c1c }
+  .input-brown  { background:#fef3c7; border:2px solid #78350f }
+
+  button {
+    padding:10px 16px;
+    margin-top:10px;
+    font-size:15px;
+    cursor:pointer;
+  }
+
   .success { color:green; font-weight:bold }
   .error { color:#b91c1c }
 </style>
+
 
 </head>
 <body>
