--- a/index.html
+++ b/index.html
@@ -83,24 +83,29 @@
   <li>Addiert man <strong>4</strong> zur <strong>gelben</strong> Zahl, erhält man die <strong>braune</strong> Zahl.</li>
 </ul>
 
-  <<div class="row">
-  <label class="green">Grün<br>
+ <div class="row">
+  <label class="green">
+    Grün<br>
     <input value="6" disabled class="input-green">
   </label>
 
-  <label class="yellow">Gelb<br>
+  <label class="yellow">
+    Gelb<br>
     <input id="gelb" type="number" class="input-yellow">
   </label>
 
-  <label class="blue">Blau<br>
+  <label class="blue">
+    Blau<br>
     <input id="blau" type="number" class="input-blue">
   </label>
 
-  <label class="red">Rot<br>
+  <label class="red">
+    Rot<br>
     <input id="rot" type="number" class="input-red">
   </label>
 
-  <label class="brown">Braun<br>
+  <label class="brown">
+    Braun<br>
     <input id="braun" type="number" class="input-brown">
   </label>
 </div>
